--- a/style.css
+++ b/style.css
@@ -115,6 +115,7 @@ header {
     padding: 1rem;
 }
 
+
 header .text-container {
     z-index: 2;
     position: relative;
@@ -163,6 +164,7 @@ section {
     display: flex;
     align-items: center;
     justify-content: space-around;
+    perspective: 1200px;
 }
 
 .recent-project .image-container {
@@ -170,6 +172,30 @@ section {
     height: 25vw;
     border-radius: 50%;
     overflow: hidden;
+    border: 3px green dotted;
+    position: absolute;
+
+}
+
+
+.flipper {
+    width: 25vw !important;
+    height: 25vw !important;
+    position: relative;
+    transform-style: preserve-3d;
+
+}
+
+.flipper:hover {
+    transition: transform 2s ease-out;
+    transform: rotateY(720deg);
+}
+
+.flipper .back {
+    background: #B35246;
+    position: absolute;
+    backface-visibility: hidden;
+    transform: rotateY(180deg);
 }
 
 .recent-project .img-svg svg {
@@ -180,4 +206,24 @@ section {
 .recent-project .text-container {
     width: 35vw;
     height: auto;
+}
+
+@keyframes spinner-img {
+    0% {
+        transform: rotateY(0);
+    }
+
+    100% {
+        transform: rotateY(720deg);
+    }
+}
+
+@keyframes spinner-back {
+    0% {
+        transform: rotateY(0);
+    }
+
+    100% {
+        transform: rotateY(540deg);
+    }
 }
