--- a/style.css
+++ b/style.css
@@ -227,3 +227,110 @@ section {
         transform: rotateY(540deg);
     }
 }
+
+/* projects */
+.projects {
+    position: relative;
+    height: 100vh;
+}
+
+.projects-main {
+    position: relative;
+    width: 80%;
+    height: 100%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+#circle1 {
+    position: absolute;
+    top: 15%;
+    left: 1%;
+    width: 200px;
+    height: 200px;
+    background-color: rgb(16, 156, 156);
+    border-radius: 50%;
+    z-index: 15;
+
+}
+
+#circle2 {
+    width: 200px;
+    height: 200px;
+    background-color: rgb(223, 78, 11);
+    border-radius: 50%;
+    position: absolute;
+    top: 60%;
+    left: 20%;
+    z-index: 15;
+}
+
+#circle3 {
+    width: 200px;
+    height: 200px;
+    background-color: rgb(152, 37, 228);
+    border-radius: 50%;
+    position: absolute;
+    top: 65%;
+    left: 75%;
+    z-index: 15;
+}
+
+#circle4 {
+    width: 200px;
+    height: 200px;
+    background-color: rgb(53, 228, 37);
+    border-radius: 50%;
+    position: absolute;
+    top: 15%;
+    left: 65%;
+    z-index: 15;
+}
+
+polyline {
+    /* fill: none; */
+    stroke-width: 3;
+    z-index: 5;
+    stroke: rgba(145, 37, 37, 1);
+}
+
+svg .line-drawer {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
+#line1 {
+    stroke: green !important;
+}
+
+#line2 {
+    stroke: black !important;
+}
+
+#line3 {
+    stroke: purple !important;
+}
+
+#line4 {
+    stroke: aqua !important;
+}
+
+#line5 {
+    stroke: rgb(167, 164, 12) !important;
+}
+
+#line6 {
+    stroke: rgb(224, 145, 27) !important;
+}
+
+#linecontainer {
+    position: relative;
+    width: 100%;
+    height: 95%;
+}
+
+.hide {
+    display: none
+}
