--- a/style.css
+++ b/style.css
@@ -136,8 +136,8 @@ header .image-container {
     transform: scale(1.3);
 } */
 .img-svg svg {
-    height: 100%;
-    width: 100%;
+    height: 100% !important;
+    width: 100% !important;
 }
 
 /* Recent Project */
@@ -154,7 +154,7 @@ section {
     width: 100%;
     border-radius: 0.8rem;
     padding: 0 10%;
-    background: rgb(228, 228, 228);
+    /* background: rgb(228, 228, 228); */
     border: 3px dashed rgb(173, 173, 173);
 }
 
@@ -182,14 +182,14 @@ section {
     width: 25vw !important;
     height: 25vw !important;
     position: relative;
-    transform-style: preserve-3d;
-
+    transform-style: preserve-3d; 
+    transform: rotateY(0deg);
 }
 
-.flipper:hover {
+/* .flipper {
     transition: transform 2s ease-out;
-    transform: rotateY(720deg);
-}
+
+} */
 
 .flipper .back {
     background: #B35246;
@@ -208,6 +208,7 @@ section {
     height: auto;
 }
 
+/* 
 @keyframes spinner-img {
     0% {
         transform: rotateY(0);
@@ -226,7 +227,7 @@ section {
     100% {
         transform: rotateY(540deg);
     }
-}
+} */
 
 /* projects */
 .projects {
@@ -291,15 +292,22 @@ section {
 polyline {
     /* fill: none; */
     stroke-width: 3;
-    z-index: 5;
+    z-index: 55;
     stroke: rgba(145, 37, 37, 1);
 }
 
-svg .line-drawer {
+/* svg .line-drawer {
+    position: absolute ;
+    width: 100% ;
+    height: 100% ;
+} */
+
+#line1svg, #line2svg, #line3svg, #line4svg, #line5svg, #line6svg {
     position: absolute;
     width: 100%;
     height: 100%;
 }
+
 
 #line1 {
     stroke: green !important;
