fixed animation for loading

--- a/style.css
+++ b/style.css
@@ -154,7 +154,7 @@ section {
     width: 100%;
     border-radius: 0.8rem;
     padding: 0 10%;
-    /* background: rgb(228, 228, 228); */
+    background: rgb(228, 228, 228);
     border: 3px dashed rgb(173, 173, 173);
 }
 
@@ -310,7 +310,7 @@ polyline {
 
 
 #line1 {
-    stroke: green !important;
+    stroke: rgba(247, 17, 17, 0.5) !important;
 }
 
 #line2 {
