--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@
 body {
     padding: 0 1%;
     font-family: 'Poppins', sans-serif;
+    overflow: hidden;
 }
 
 h2 {
@@ -180,11 +181,9 @@ section {
     height: 25vw;
     border-radius: 50%;
     overflow: hidden;
-    border: 3px green dotted;
     position: absolute;
 
 }
-
 
 .flipper {
     width: 25vw !important;
@@ -193,11 +192,6 @@ section {
     transform-style: preserve-3d; 
     transform: rotateY(0deg);
 }
-
-/* .flipper {
-    transition: transform 2s ease-out;
-
-} */
 
 .flipper .back {
     background: #B35246;
@@ -215,27 +209,6 @@ section {
     width: 35vw;
     height: auto;
 }
-
-/* 
-@keyframes spinner-img {
-    0% {
-        transform: rotateY(0);
-    }
-
-    100% {
-        transform: rotateY(720deg);
-    }
-}
-
-@keyframes spinner-back {
-    0% {
-        transform: rotateY(0);
-    }
-
-    100% {
-        transform: rotateY(540deg);
-    }
-} */
 
 /* projects */
 .projects {
@@ -318,27 +291,27 @@ polyline {
 
 
 #line1 {
-    stroke: rgba(247, 17, 17, 0.5) !important;
+    stroke: rgb(71, 163, 199) !important;
 }
 
 #line2 {
-    stroke: black !important;
+    stroke: rgb(71, 163, 199) !important;
 }
 
 #line3 {
-    stroke: purple !important;
+    stroke: rgb(71, 163, 199) !important;
 }
 
 #line4 {
-    stroke: aqua !important;
+    stroke: rgb(71, 163, 199) !important;
 }
 
 #line5 {
-    stroke: rgb(167, 164, 12) !important;
+    stroke: rgb(71, 163, 199) !important;
 }
 
 #line6 {
-    stroke: rgb(224, 145, 27) !important;
+    stroke: rgb(71, 163, 199) !important;
 }
 
 #linecontainer {
@@ -350,3 +323,28 @@ polyline {
 .hide {
     display: none
 }
+
+
+/* ========================================= */
+
+/* jonestein-design-portfolio.html */
+.loader-container {
+    width: 100%;
+    height: 100vh;
+    border: 2px solid red;
+}
+.loader {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    transform-origin: center;
+    width: 220vw;
+    height: 220vw;
+    border-radius: 50%;
+    background: black;
+    transition-delay: 3s;
+}
+
+
+
