--- a/style.css
+++ b/style.css
@@ -328,11 +328,7 @@ polyline {
 /* ========================================= */
 
 /* jonestein-design-portfolio.html */
-.loader-container {
-    width: 100%;
-    height: 100vh;
-    border: 2px solid red;
-}
+
 .loader {
     position: absolute;
     top: 50%;
@@ -344,6 +340,7 @@ polyline {
     border-radius: 50%;
     background: black;
     transition-delay: 3s;
+    z-index: 1000;
 }
 
 
