--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap');
-
 :root {
     --light-green: #DDFF71;
     --dark-green: #97B33D;
@@ -23,6 +22,7 @@ body {
 h2 {
     font-weight: 400;
 }
+
 
 /* navigator */
 
@@ -62,15 +62,19 @@ nav {
     justify-content: center;
     border-radius: 0.8rem;
 }
+
 a {
     text-decoration: none;
 }
+
 a:visited {
     color: black
 }
+
 a:hover {
     color: var(--medium-blue)
 }
+
 .logo {
     padding: 0.5rem;
     height: 3.5rem;
@@ -81,6 +85,7 @@ a:hover {
     justify-content: center;
     border-radius: 0.8rem;
 }
+
 
 /* header */
 
@@ -115,15 +120,30 @@ header {
 .image-container {
     width: 50vh;
     height: 50vh;
-    background: var(--light-red);
-    border: 3px dashed var(--dark-red);
+    background: white;
+    /* border: 3px solid var(--dark-red); */
     border-radius: 0.8rem;
     display: flex;
     align-items: center;
     justify-content: center;
     padding: 1rem;
+    position: relative;
+    filter: drop-shadow(5px 5px 5px rgba(119, 119, 119, 0.8))
 }
 
+.front,
+.back {
+    border-radius: 50%!important;
+    padding: 0;
+    position: relative;
+}
+
+img {
+    width: 90%;
+    height: auto;
+    object-fit: cover;
+    
+}
 
 header .text-container {
     z-index: 2;
@@ -139,17 +159,21 @@ header .image-container {
     overflow: hidden;
 }
 
+
 /* header img {
     width: 100%;
     height: auto;
     transform: scale(1.3);
 } */
+
 .img-svg svg {
     height: 100% !important;
     width: 100% !important;
 }
 
+
 /* Recent Project */
+
 .title {
     width: 100%;
     height: 5vh !important;
@@ -182,14 +206,13 @@ section {
     border-radius: 50%;
     overflow: hidden;
     position: absolute;
-
 }
 
 .flipper {
     width: 25vw !important;
     height: 25vw !important;
     position: relative;
-    transform-style: preserve-3d; 
+    transform-style: preserve-3d;
     transform: rotateY(0deg);
 }
 
@@ -210,7 +233,9 @@ section {
     height: auto;
 }
 
+
 /* projects */
+
 .projects {
     position: relative;
     height: 100vh;
@@ -234,7 +259,6 @@ section {
     background-color: rgb(16, 156, 156);
     border-radius: 50%;
     z-index: 15;
-
 }
 
 #circle2 {
@@ -277,18 +301,23 @@ polyline {
     stroke: rgba(145, 37, 37, 1);
 }
 
+
 /* svg .line-drawer {
     position: absolute ;
     width: 100% ;
     height: 100% ;
 } */
 
-#line1svg, #line2svg, #line3svg, #line4svg, #line5svg, #line6svg {
+#line1svg,
+#line2svg,
+#line3svg,
+#line4svg,
+#line5svg,
+#line6svg {
     position: absolute;
     width: 100%;
     height: 100%;
 }
-
 
 #line1 {
     stroke: rgb(71, 163, 199) !important;
@@ -327,6 +356,7 @@ polyline {
 
 /* ========================================= */
 
+
 /* jonestein-design-portfolio.html */
 
 .loader {
@@ -338,10 +368,7 @@ polyline {
     width: 220vw;
     height: 220vw;
     border-radius: 50%;
-    background: black;
+    background: white;
     transition-delay: 3s;
     z-index: 1000;
 }
-
-
-
