--- a/style.css
+++ b/style.css
@@ -14,9 +14,11 @@
 }
 
 body {
-    padding: 0 1%;
     font-family: 'Poppins', sans-serif;
     overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    align-items: center
 }
 
 h2 {
@@ -27,18 +29,19 @@ h2 {
 /* navigator */
 
 nav {
-    width: 98%;
+    width: 100%;
     height: 8vh;
     display: flex;
     align-items: center;
     justify-content: space-around;
-    border: 3px dashed var(--dark-green);
-    border-radius: 0.8rem;
+    /* border: 3px dashed var(--dark-green); */
+    border-radius: 0 0 0.3rem 0.3rem;
     background: #e3f1b4;
     font-weight: 600;
     letter-spacing: 1.5px;
     position: fixed;
-    z-index: 100;
+    z-index: 5;
+    filter: drop-shadow(4px 4px 8px rgba(65, 65, 65, 0.5));
 }
 
 .nav-list {
@@ -90,15 +93,17 @@ a:hover {
 /* header */
 
 header {
-    width: 100%;
+    width: 98%;
     height: 90vh;
     border-radius: 0.8rem;
     display: flex;
     align-items: center;
     justify-content: center;
     padding: 0 10%;
-    background: rgb(228, 228, 228);
-    border: 3px dashed rgb(173, 173, 173);
+    /* background: rgb(228, 228, 228); */
+    /* border: 3px dashed rgb(173, 173, 173); */
+    top: 8vh;
+    position: relative;
 }
 
 .bold {
@@ -112,9 +117,10 @@ header {
 
 .text-container {
     padding: 2.5rem;
-    background: rgba(255, 255, 255, 0.5);
-    border: 3px dashed rgba(173, 173, 173, 0.8);
+    background: rgba(255, 255, 255, 0.9);
+    /* border: 3px dashed rgba(173, 173, 173, 0.8); */
     border-radius: 0.6rem;
+    filter: drop-shadow(4px 4px 4px rgba(65, 65, 65, 0.5));
 }
 
 .image-container {
@@ -128,7 +134,7 @@ header {
     justify-content: center;
     padding: 1rem;
     position: relative;
-    filter: drop-shadow(5px 5px 5px rgba(119, 119, 119, 0.8))
+    filter: drop-shadow(2px 2px 2px rgba(65, 65, 65, 0.5))
 }
 
 .front,
@@ -184,13 +190,18 @@ header .image-container {
 }
 
 section {
-    width: 100%;
+    width: 98%;
     border-radius: 0.8rem;
     padding: 0 10%;
-    background: rgb(228, 228, 228);
-    border: 3px dashed rgb(173, 173, 173);
+    /* background: rgb(228, 228, 228); */
+    /* border: 3px dashed rgb(173, 173, 173); */
+    top: 8vh;
+    position: relative;
 }
+section .text-container, .circle {
+    filter: drop-shadow(2px 2px 2px rgba(65, 65, 65, 0.5))
 
+}
 .recent-project div {
     width: 100%;
     height: 70vh;
@@ -258,7 +269,7 @@ section {
     height: 200px;
     background-color: rgb(16, 156, 156);
     border-radius: 50%;
-    z-index: 15;
+    z-index: 3;
 }
 
 #circle2 {
@@ -269,7 +280,7 @@ section {
     position: absolute;
     top: 60%;
     left: 20%;
-    z-index: 15;
+    z-index: 3;
 }
 
 #circle3 {
@@ -280,7 +291,7 @@ section {
     position: absolute;
     top: 65%;
     left: 75%;
-    z-index: 15;
+    z-index: 3;
 }
 
 #circle4 {
@@ -291,13 +302,13 @@ section {
     position: absolute;
     top: 15%;
     left: 65%;
-    z-index: 15;
+    z-index: 3;
 }
 
 polyline {
     /* fill: none; */
     stroke-width: 3;
-    z-index: 55;
+    z-index: 4;
     stroke: rgba(145, 37, 37, 1);
 }
 
@@ -370,5 +381,5 @@ polyline {
     border-radius: 50%;
     background: white;
     transition-delay: 3s;
-    z-index: 1000;
+    z-index: 10;
 }
